--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "motion": "^12.23.26",
     "next": "16.1.0",
     "next-themes": "^0.4.6",
     "react": "19.2.3",
